--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ title: Buddhavaram Chaitanya Roy
 #logo:
 #description:
 show_downloads: true
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
