--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Buddhavaram Chaitanya Roy
 #logo:
 #description:
-show_downloads: true
+#show_downloads: true
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
